organize directories and modify html file

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -14,12 +14,15 @@
     </head>
 
     <body>
-        <h1> Welcome to my server </h1>
+        <h1> Welcome to the WebServer </h1>
         <p>If you see this page, the web server is successfully installed and
         working. Further configuration is required.</p>
 
         <p>For online documentation and support please refer to
-        <a href="https://github.com/zyearn/zaver">https://github.com/</a>.<br/>
+        <a href="https://github.com/erot1211/WebServer">https://github.com/erot1211/WebServer</a>.<br/>
+
+
+
 
         <p><em>Thank you for using.</em></p>
     </body>
