--- a/html/welcome.html
+++ b/html/welcome.html
@@ -19,7 +19,7 @@
         working. Further configuration is required.</p>
 
         <p>For online documentation and support please refer to
-        <a href="https://github.com/erot1211/WebServer">https://github.com/erot1211/WebServer</a>.<br/>
+        <a href="https://github.com/MrTianJun/WebServer">https://github.com/MrTianJun/WebServer</a>.<br/>
 
 
 
