--- a/html/welcome.html
+++ b/html/welcome.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1> Welcome to the WebServer </h1>
+        <h1> Welcome to WebServer </h1>
         <p>If you see this page, the web server is successfully installed and
         working. Further configuration is required.</p>
 
